--- a/Rich/web/log_in.html
+++ b/Rich/web/log_in.html
@@ -12,7 +12,7 @@
     <body style="background-image: url(resources/images/background.jpg);background-size: 100%">
       <div id="wrapper">
         <nav class="switch_nav" >
-            <a href="register.html" id="switch_signup" class="switch_btn">log up</a>
+            <a href="log_up.html" id="switch_signup" class="switch_btn">log up</a>
             <a href="javascript:;" id="switch_login" class="switch_btn on">log in</a>
             <div class="switch_bottom" id="switch_bottom"></div>
         </nav>
