--- a/Rich/web/ziyuan.xhtml
+++ b/Rich/web/ziyuan.xhtml
@@ -55,32 +55,31 @@ and open the template in the editor.
                             </div>
                             <div class="list" >
                                 <div class="item">
-                                    <a href="/video_detail/18782.html" target="_blank">
-                                        <div class="h16" title="2019年“文化和自然遗产日”宣传片">
-                                            2019年“文化和自然遗产日”宣传片
+                                    <a href="http://www.iqiyi.com/w_19s7iar3bh.html" target="_blank">
+                                        <div class="h16" title="金牛千张传统技艺">
+                                            金牛千张传统技艺
                                         </div>
 
-                                        <div class="p">6月7日晚，由文化和旅游部、广东省人民政府主办的2019年...</div>
+                                        <div class="p">金牛千张皮，是湖北省黄石市大冶金牛镇著名的特产，鄂南地区的...</div>
                                     </a>
                                 </div><div class="item">
-                                    <a href="/video_detail/15786.html" target="_blank">
-                                        <div class="h16" title="2007年“守望家园”中国非物质文化遗产日本专场晚会">
-                                            2007年“守望家园”中国非物质文化遗产日本专场晚会
+                                    <a href="http://www.iqiyi.com/w_19s5xzpqap.html#curid=33563389709_45f2f1908b03eea39e65a6cab75bb8d3" target="_blank">
+                                        <div class="h16" title="中国传统技艺纪录片">
+                                            中国传统技艺纪录片
                                         </div>
 
-                                        <div class="p">2007年“守望家园”中国非物质文化遗产日本专场晚会</div>
+                                        <div class="p">让烟火 带你回家</div>
                                     </a>
                                 </div><div class="item">
-                                    <a href="/video_detail/8984.html" target="_blank">
-                                        <div class="h16" title="新疆维吾尔族木卡姆">新疆维吾尔族木卡姆</div>
+                                    <a href="http://www.iqiyi.com/w_19s9frwejl.html" target="_blank">
+                                        <div class="h16" title="点翠">点翠</div>
 
-                                        <div class="p">2007年“守望家园”中国非物质文化遗产日本专场晚会</div>
+                                        <div class="p">追溯到汉魏时代的工艺</div>
                                     </a>
                                 </div><div class="item">
-                                    <a href="/video_detail/8977.html" target="_blank">
-                                        <div class="h16" title="蒙古族长调《初升的太阳》">蒙古族长调《初升的太阳》</div>
-
-                                        <div class="p">2007年“守望家园”中国非物质文化遗产日本专场晚会</div>
+                                    <a href="http://www.sohu.com/a/336345978_160789" target="_blank">
+                                        <div class="h16" title="传统熏香技艺传承人高晴">传统熏香技艺传承人高晴</div>
+                                        <div class="p">让生活充满“香气”</div>
                                     </a>
                                 </div>
 
