--- a/Rich/web/lunbotu.xhtml
+++ b/Rich/web/lunbotu.xhtml
@@ -46,7 +46,7 @@ and open the template in the editor.
 	<div id="box" onmouseover="stop()" onmouseout="start()">
 		<div id="red" class="slide"></div>
 		<div id="green" class="slide"></div>
-                <div id="blue" class="slide"> #{projectController.getFacade()}</div>
+                <div id="blue" class="slide"></div>
 	</div>
     
 </body>
