--- a/Rich/web/index.xhtml
+++ b/Rich/web/index.xhtml
@@ -7,7 +7,7 @@
         <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
 
-    <h:body style="background-image: url(resources/images/background.jpg);">i
+    <h:body style="background-image: url(resources/images/background.jpg); height: 100%; width: 100%; background-size: 100%">i
         <!--首页页面-->
 
         <!--下拉页面-->
@@ -15,90 +15,90 @@
 
 
         <div style="position: absolute;top: 300px;left: 210px;">
-            <h:link onclick="aaa(1)" outcome="/center">
+            <h:link onclick='aaa("雕塑工艺")' outcome="/center">
                 <img src="resources/images/class/class1.jpg" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
         </div>
 
         <div style="position: absolute;top: 363px;left: 358px">
-            <h:link onclick="aaa(2)" outcome="/center">
+            <h:link onclick='aaa("陶瓷制作工艺")' outcome="/list">
                 <img src="resources/images/class/class2.jpg" alt="class" height="252px" width="148px"> </img>    
             </h:link>
         </div>
 
         <div style="position: absolute;top: 111px;left: 432px">
-            <h:link onclick="aaa(3)" outcome="/centerPage/center">
+            <h:link onclick='aaa("织染工艺")' outcome="/centerPage/center">
                 <img src="resources/images/class/class3.png" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
         </div>
 
         <div style="position: absolute;top: 174px;left: 580px">
-            <h:link onclick="aaa(4)" outcome="/centerPage/invest">
+            <h:link onclick='aaa("传统建筑营造工艺")' outcome="/centerPage/invest">
                 <img src="resources/images/class/class4.jpg" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
         </div>
 
         <div style="position: absolute;top: 426px;left: 580px">
-            <h:link onclick="aaa(5)" outcome="/center">
+            <h:link onclick='aaa("金属冶炼加工工艺")' outcome="/center">
                 <img src="resources/images/class/class5.jpg" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
         </div>
 
         <div style="position: absolute;top: 210px;left: 728px">
-            <h:link onclick="aaa(6)" outcome="/center">
+            <h:link onclick='aaa("工具器械制作工艺")' outcome="/center">
                 <img src="resources/images/class/class6.jpg" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
         </div>
 
         <div style="position: absolute;top: 254px;left: 876px">
-            <h:link onclick="aaa(7)" outcome="/center">
+            <h:link onclick='aaa("文房四宝制作工艺")' outcome="/center">
                 <img src="resources/images/class/class7.jpg" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
         </div>
 
         <div style="position: absolute;top: 506px;left: 876px">
-            <h:link onclick="aaa(8)" outcome="/center">
+            <h:link onclick='aaa("印刷术工艺")' outcome="/center">
                 <img src="resources/images/class/class8.jpg" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
         </div>
 
         <div style="position: absolute;top: 402px;left: 1024px">
-            <h:link onclick="aaa(9)" outcome="/center">
+            <h:link onclick='aaa("刻绘工艺")' outcome="/center">
                 <img src="resources/images/class/class9.jpg" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
         </div>
 
         <div style="position: absolute;top: 150px;left: 1098px">
-            <h:link onclick="aaa(10)" outcome="/center">
+            <h:link onclick='aaa("髹漆工艺")' outcome="/center">
                 <img src="resources/images/class/class10.jpg" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
         </div>
 
         <div style="position: absolute;top: 465px;left: 1172px">
-            <h:link onclick="aaa(11)" outcome="/center">
+            <h:link onclick='aaa("家具制作工艺")' outcome="/center">
                 <img src="resources/images/class/class11.jpg" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
         </div>
 
         <div style="position: absolute;top: 90px;left: 1246px">
-            <h:link onclick="aaa(12)" outcome="/center">
+            <h:link onclick='aaa("特种工艺及其他")' outcome="/center">
                 <img src="resources/images/class/class12.jpg" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
         </div>
 
         <div style="position: absolute;top: 342px;left: 1320px">
-            <h:link onclick="aaa(13)" outcome="/center">
+            <h:link onclick='aaa("陶瓷制作工艺")' outcome="/center">
                 <img src="resources/images/class/class13.jpg" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
