--- a/Rich/web/log_in.xhtml
+++ b/Rich/web/log_in.xhtml
@@ -27,9 +27,9 @@ and open the template in the editor.
         <h:form>
             <p:panel id="panel"> 
                 <h:panelGrid columns="1" class="group_input">
-                    <p:inputText id="userTel"  value="#{AllController.tempUser.userTel}" required="true" maxlength="20" placeholder="输入手机号" requiredMessage="请输入手机号"/>
-        <!--p:inputText id="userName" value="#{AllController.tempUser.userName}" required="true" maxlength="20" placeholder="输入用户名" requiredMessage="请输入用户名"/-->
-                    <p:password id="userPsw"  value="#{AllController.tempUser.userPsw}" required="true" maxlength="20" placeholder="输入密码" requiredMessage="请输入密码"/>
+                    <p:inputText id="userTel"  value="#{AllController.userTel}" required="true" maxlength="20" placeholder="输入手机号" requiredMessage="请输入手机号"/>
+        
+                    <p:password id="userPsw"  value="#{AllController.userPsw}" required="true" maxlength="20" placeholder="输入密码" requiredMessage="请输入密码"/>
                 </h:panelGrid>
                 <p:commandButton value="登录" update="panel" class="login-btn" action="#{AllController.logIn}" />
             </p:panel>
