--- a/Rich/web/index.xhtml
+++ b/Rich/web/index.xhtml
@@ -28,7 +28,7 @@
         </div>
 
         <div style="position: absolute;top: 111px;left: 432px">
-            <h:link onclick='aaa("织染工艺")' outcome="/centerPage/center">
+            <h:link onclick='aaa("织染工艺")' outcome="/list">
                 <img src="resources/images/class/class3.png" alt="class" height="252px" width="148px">                
                 </img>
             </h:link>
@@ -104,7 +104,25 @@
             </h:link>
         </div>
 
+        <br />
+        <h:link outcome="/project/List" value="Show All Project Items"/>
+        <br />
+        <h:link outcome="/user/List" value="Show All User Items"/>
+        <br />
+        <h:link outcome="/guardProj/List" value="Show All GuardProj Items"/>
+        <br />
+        <h:link outcome="/investeProj/List" value="Show All InvesteProj Items"/>
+        <br />
+        <h:link outcome="/project/List" value="Show All Project Items"/>
+        <br />
+        <h:link outcome="/user/List" value="Show All User Items"/>
     </h:body>
+
+
+
+
+
+
 
 </html>
 
