--- a/Rich/web/log_up.xhtml
+++ b/Rich/web/log_up.xhtml
@@ -14,10 +14,10 @@ and open the template in the editor.
         <title>注册</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <!--h:outputStylesheet library="css" name="log.css" /-->
-        <!--link rel="stylesheet" type="text/css" href="resources/css/log_in.css"/-->
+        <link rel="stylesheet" type="text/css" href="resources/css/log_in.css"/>
           
     </h:head>
-    <h:body  style="background-image: url(resources/images/background.jpg);background-size: 100%">
+    <h:body  style=" background-image: url(resources/images/back3.png);">
         <div id="wrapper">
             <nav class="switch_nav" >
                 <a href="javascript:;" id="switch_signup" class="switch_btn on">注册</a>
@@ -26,15 +26,20 @@ and open the template in the editor.
             </nav>
         </div>
         <h:form>
-            <p:panel id="panel" class="logup-panel">
-            <p:outputLabel value="注册" class="logup-output"/>
-            <h:panelGrid columns="1">
-                <p:inputText id="userTel" value="#{AllController.userTel}" required="true" maxlength="20" placeholder="输入手机号" requiredMessage="请输入手机号"/>
-                <p:inputText id="userName" value="#{AllController.userName}" required="true" maxlength="20" placeholder="输入用户名" requiredMessage="请输入用户名"/>
-                <p:password id="userPsw" value="#{AllController.userPsw}" required="true" maxlength="20" placeholder="输入密码" requiredMessage="请输入密码"/>
+            <p:panel id="panel" class="logup-panel" style="text-align:center;background-color: transparent;border: 0px;margin-top: 0px">
+            <h:panelGrid columns="1" style="text-align: center;">
+                <p:inputText id="userTel" value="#{AllController.userTel}" required="true" maxlength="20" placeholder="输入手机号" requiredMessage="请输入手机号"
+                            style="margin-left: 640px;background: transparent;text-align: center;margin-top:5px"/>  
+                <p:inputText id="userName" value="#{AllController.userName}" required="true" maxlength="20" placeholder="输入用户名" requiredMessage="请输入用户名"
+                             style="margin-left: 640px;background: transparent;text-align: center;margin-top:5px"/>
+                <p:password id="userPsw" value="#{AllController.userPsw}" required="true" maxlength="20" placeholder="输入密码" requiredMessage="请输入密码"
+                            style="margin-left: 640px;background: transparent;text-align: center;margin-top: 5px"/>
             </h:panelGrid>
-                <p:commandButton value="注册" update="panel" class="logup-btn" action="#{AllController.logUp()}"
-                                 />
+                <p:commandButton value="注册" update="panel" class="logup-btn" action="#{AllController.logUp}" 
+                                 style="margin-left:0px;margin-top: 20px;background-image: url(resources/images/button2.jpg);"/>
+                <p:messages id="message" class="logup-message" showDetail="false" showIcon="false" style="background-color: transparent;border: 0px;margin-left: auto;
+                            margin-right: auto;width:10px"/>
+            
             </p:panel>
         </h:form>
     </h:body>
