--- a/Rich/web/ziyuan.xhtml
+++ b/Rich/web/ziyuan.xhtml
@@ -5,14 +5,18 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+    <h:head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="resources/css/ziyuan.css"/>
-
-    </head>
-    <body>
+ <iframe  MARGINWIDTH="0" MARGINHEIGHT="0" HSPACE="0" VSPACE="0" FRAMEBORDER="0" SCROLLING="no" src="head.xhtml" width="100%"  height="auto"/>
+   
+    </h:head>
+    <body style="background-image: url(resources/images/ziyuan/resources1.jpg)">
         <div class="x-container" data-nopad="true" style="padding-top: 0px;">
 
 
