--- a/Rich/web/head.xhtml
+++ b/Rich/web/head.xhtml
@@ -18,8 +18,8 @@
                     margin-left: 60px;
                 }
                 .title1{
-                    width:1600px;
-                    height:76px;
+                    width:1900px;
+                    height:84px;
                     display:flex;
                     flex-direction:row;
                     background-color: rgba(51,51,51,0.5);
@@ -27,14 +27,14 @@
                 .text{
                     line-height: 76px;
                     font-family: "楷体","楷体_GB2312";
-                    font-size: 14px;
+                    font-size: 20px;
                     color: white;
                     text-decoration: none;
                 }
                 .name{
                     line-height: 76px;
                     font-family: FZYaoti;
-                    font-size: 16px;
+                    font-size: 22px;
                     color: white;
                     text-decoration: none;
                     margin-left: 30px;
@@ -42,8 +42,8 @@
                     font-family: "楷体","楷体_GB2312";  
                 }
                 .title2{
-                    width:1600px;
-                    height:54px;
+                    width:1900px;
+                    height:60px;
                     display:flex;
                     flex-direction:row;
                     margin-top: 2px;
@@ -52,13 +52,13 @@
 
                 .tab{
                     line-height: 54px;
-                    margin-left: 200px;
+                    margin-left: 240px;
                     margin-right: 50px;
                     font-family: "楷体","楷体_GB2312";
                     text-align:center;
                     text-decoration: none;
                     color:white;
-                    font-size: 20px;
+                    font-size: 26px;
 
                 }
             </style>
@@ -67,7 +67,7 @@
 
         <h:body>
         
-            <div style="position: absolute; left: 0px;">
+            <div style="position: absolute; left: 0px; top:5px">
                 <div class="title1">
                     <img class="icon" src="resources/images/sxy/icon.png" />
                     <h:form>
