--- a/Rich/web/ziyuan.xhtml
+++ b/Rich/web/ziyuan.xhtml
@@ -10,9 +10,10 @@ and open the template in the editor.
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>TODO supply a title</title>
+        <title>中国传统技艺电子博物馆资源</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="resources/css/ziyuan.css"/>
+        <link rel="stylesheet" type="text/css" href="resources/css/Animate.css"/>
  <iframe  MARGINWIDTH="0" MARGINHEIGHT="0" HSPACE="0" VSPACE="0" FRAMEBORDER="0" SCROLLING="no" src="head.xhtml" width="100%"  height="auto"/>
    
     </h:head>
@@ -24,20 +25,20 @@ and open the template in the editor.
                 <div class="x-wrap">
                     <div class="title">
                         <div class="t_head">
-                            <div class="h30" style="color: #fff;font-family: 'fzqkbysjw';ext-align: center;">
+                            <div class="h30 animated zoomIn" style="color: #fff;font-family: 'fzqkbysjw';ext-align: center;">
                                 展览
                             </div>				
                         </div>
 
                     </div>
                     <div><div class="list">
-                            <div class="item act" style="background-image: url(resources/images/ziyuan/s5bed31fb3ca64.jpg); width: 25%;">
+                            <div class="item act animated fadeInUp" style="background-image: url(resources/images/ziyuan/s5bed31fb3ca64.jpg); width: 25%;">
                                 <a href="http://cace.cnlic.org.cn/xwzx/zhzx/201909/t20190902_61583.html" target="_blank"><div class="h18">中国工艺美术博览会</div></a>
-                            </div><div class="item" style="background-image: url(resources/images/ziyuan/s5c8a2b4552104.jpg); width: 25%;">
+                            </div><div class="item animated fadeInDown" style="background-image: url(resources/images/ziyuan/s5c8a2b4552104.jpg); width: 25%;">
                                 <a href="https://www.meipian.cn/j5tt5b9" target="_blank"><div class="h18">雕塑作品展</div></a>
-                            </div><div class="item" style="background-image: url(resources/images/ziyuan/s5bed31fb1b168.jpg); width: 25%;">
+                            </div><div class="item animated fadeInUp" style="background-image: url(resources/images/ziyuan/s5bed31fb1b168.jpg); width: 25%;">
                                 <a href="https://www.sohu.com/a/257145153_681028" target="_blank"><div class="h18">篮筐编织技艺应用作品展览</div></a>
-                            </div><div class="item" style="background-image: url(resources/images/ziyuan/s5c8b4568abd39.jpg); width: 25%;">
+                            </div><div class="item animated fadeInDown" style="background-image: url(resources/images/ziyuan/s5c8b4568abd39.jpg); width: 25%;">
                                 <a href="http://www.yczihua.com/article-23558.html" target="_blank"><div class="h18">文房四宝制作艺术</div></a>
                             </div></div></div>		</div>
                 <div class="bgi"></div>
@@ -92,6 +93,10 @@ and open the template in the editor.
                     </div>
                 </div>
             </div>
+            <div style="margin-top: 20px; ">
+            <iframe    MARGINWIDTH="0" MARGINHEIGHT="0" HSPACE="0" VSPACE="0" FRAMEBORDER="0" SCROLLING="no" src="foot.xhtml" width="100%"  height="auto"/>
+        </div>
         </div>  
+         <img src="./resources/images/sxy/foot.png"/>
     </body>
 </html>
