--- a/Rich/web/index.xhtml
+++ b/Rich/web/index.xhtml
@@ -1,128 +1,115 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>中国传统技艺电子博物馆</title>
         <h:outputStylesheet name="css/jsfcrud.css"/>
+        <link rel="stylesheet" type="text/css" href="resources/css/Animate.css"/>
     </h:head>
 
-    <h:body style="background-image: url(resources/images/background.jpg); height: 100%; width: 100%; background-size: 100%">i
+    <h:body  style="background-image: url(resources/images/background.jpg); height: 100%; width: 100%; background-size: 100%">
+        
         <!--首页页面-->
+        <div style="background: url(resources/images/background.jpg); height: 100%; width: 100%; background-size: 100%;">
+            <!--下拉页面-->
+            <div class="one" style="position:absolute;top: 220px;left: 130px ">中国传统技艺名录</div> 
 
-        <!--下拉页面-->
-        <div class="one" style="position:absolute;top: 220px;left: 60px ">中国传统技艺名录</div> 
 
+            <div style="position: absolute;top: 300px;left: 370px;" class="animated bounceInDown">
+                <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(1)}" style="background-image:url(resources/images/class/class1.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
 
-        <div style="position: absolute;top: 300px;left: 210px;">
-            <h:link onclick='aaa("雕塑工艺")' outcome="/center">
-                <img src="resources/images/class/class1.jpg" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
+            <div style="position: absolute;top: 363px;left: 518px" class="animated bounceInUp">
+                <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(2)}" style="background-image:url(resources/images/class/class2.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
+
+            <div style="position: absolute;top: 111px;left: 592px" class="animated bounceInDown">
+               <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(3)}" style="background-image:url(resources/images/class/class3.png); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
+
+            <div style="position: absolute;top: 174px;left: 740px" class="animated bounceInDown">
+                <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(4)}" style="background-image:url(resources/images/class/class4.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
+
+            <div style="position: absolute;top: 426px;left: 740px" class="animated bounceInUp">
+                <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(5)}" style="background-image:url(resources/images/class/class5.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
+
+            <div style="position: absolute;top: 210px;left: 888px" class="animated bounceInDown">
+               <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(6)}" style="background-image:url(resources/images/class/class6.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
+
+            <div style="position: absolute;top: 254px;left: 1036px" class="animated bounceInDown">
+               <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(7)}" style="background-image:url(resources/images/class/class7.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
+
+            <div style="position: absolute;top: 506px;left: 1036px" class="animated bounceInUp">
+                <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(8)}" style="background-image:url(resources/images/class/class8.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
+
+            <div style="position: absolute;top: 402px;left: 1184px" class="animated bounceInUp">
+                <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(9)}" style="background-image:url(resources/images/class/class9.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
+
+            <div style="position: absolute;top: 150px;left: 1258px" class="animated bounceInDown">
+                <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(10)}" style="background-image:url(resources/images/class/class10.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
+
+            <div style="position: absolute;top: 465px;left: 1332px" class="animated bounceInUp">
+                <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(11)}" style="background-image:url(resources/images/class/class11.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
+
+            <div style="position: absolute;top: 90px;left: 1406px" class="animated bounceInDown">
+                <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(12)}" style="background-image:url(resources/images/class/class12.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
+
+            <div style="position: absolute;top: 342px;left: 1480px" class="animated bounceInUp">
+                <h:form>
+                    <h:commandButton action="#{AllController.setMyKind(13)}" style="background-image:url(resources/images/class/class13.jpg); background-size: 100%; height:252px; width:148px; border: 0px;"> 
+                    </h:commandButton>
+                </h:form>
+            </div>
         </div>
-
-        <div style="position: absolute;top: 363px;left: 358px">
-            <h:link onclick='aaa("陶瓷制作工艺")' outcome="/list">
-                <img src="resources/images/class/class2.jpg" alt="class" height="252px" width="148px"> </img>    
-            </h:link>
-        </div>
-
-        <div style="position: absolute;top: 111px;left: 432px">
-            <h:link onclick='aaa("织染工艺")' outcome="/list">
-                <img src="resources/images/class/class3.png" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
-        </div>
-
-        <div style="position: absolute;top: 174px;left: 580px">
-            <h:link onclick='aaa("传统建筑营造工艺")' outcome="/centerPage/invest">
-                <img src="resources/images/class/class4.jpg" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
-        </div>
-
-        <div style="position: absolute;top: 426px;left: 580px">
-            <h:link onclick='aaa("金属冶炼加工工艺")' outcome="/center">
-                <img src="resources/images/class/class5.jpg" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
-        </div>
-
-        <div style="position: absolute;top: 210px;left: 728px">
-            <h:link onclick='aaa("工具器械制作工艺")' outcome="/center">
-                <img src="resources/images/class/class6.jpg" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
-        </div>
-
-        <div style="position: absolute;top: 254px;left: 876px">
-            <h:link onclick='aaa("文房四宝制作工艺")' outcome="/center">
-                <img src="resources/images/class/class7.jpg" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
-        </div>
-
-        <div style="position: absolute;top: 506px;left: 876px">
-            <h:link onclick='aaa("印刷术工艺")' outcome="/center">
-                <img src="resources/images/class/class8.jpg" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
-        </div>
-
-        <div style="position: absolute;top: 402px;left: 1024px">
-            <h:link onclick='aaa("刻绘工艺")' outcome="/center">
-                <img src="resources/images/class/class9.jpg" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
-        </div>
-
-        <div style="position: absolute;top: 150px;left: 1098px">
-            <h:link onclick='aaa("髹漆工艺")' outcome="/center">
-                <img src="resources/images/class/class10.jpg" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
-        </div>
-
-        <div style="position: absolute;top: 465px;left: 1172px">
-            <h:link onclick='aaa("家具制作工艺")' outcome="/center">
-                <img src="resources/images/class/class11.jpg" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
-        </div>
-
-        <div style="position: absolute;top: 90px;left: 1246px">
-            <h:link onclick='aaa("特种工艺及其他")' outcome="/center">
-                <img src="resources/images/class/class12.jpg" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
-        </div>
-
-        <div style="position: absolute;top: 342px;left: 1320px">
-            <h:link onclick='aaa("陶瓷制作工艺")' outcome="/center">
-                <img src="resources/images/class/class13.jpg" alt="class" height="252px" width="148px">                
-                </img>
-            </h:link>
-        </div>
-
-        <br />
-        <h:link outcome="/project/List" value="Show All Project Items"/>
-        <br />
-        <h:link outcome="/user/List" value="Show All User Items"/>
-        <br />
-        <h:link outcome="/guardProj/List" value="Show All GuardProj Items"/>
-        <br />
-        <h:link outcome="/investeProj/List" value="Show All InvesteProj Items"/>
-        <br />
-        <h:link outcome="/project/List" value="Show All Project Items"/>
-        <br />
-        <h:link outcome="/user/List" value="Show All User Items"/>
     </h:body>
-
-
-
-
-
-
 
 </html>
 
